# orbifold_builder

./: .gitignore  Arrow.cpp  CMakeLists.txt  CMakeLists2.txt  DiagramItem.cpp  DiagramItem.h  DiagramScene.cpp  DiagramScene.h  DiagramTextItem.cpp  GeometryEngine.cpp  GeometryEngine.h  Main.cpp  MainWindow.cpp  MainWindow.h  Mesh.cpp  Mesh.h  README.md  ResultWidget.h  ResultsWidget.cpp  ResultsWidget.h  SparseMat.h  geometryengine.cpp  geometryengine.h  main.cpp  mainwidget.cpp  mainwidget.h  orbifold_builder.pro  scenemodifier.cpp  scenemodifier.h  util.h
diagrams/: DiagramItem.cpp  DiagramScene.cpp  DiagramScene.h  DiagramTextItem.h
doc/src/: basicshapes.qdoc
shaders/: FShader.glsl  VShader.glsl  textureFShader.glsl  textureVShader.glsl
surfaces/: CrossCap.cpp  CrossCap.h  Cube.cpp  Cube.h  KleinBottle.cpp  KleinBottle.h  MobiusStrip.cpp  MobiusStrip.h  PlyFile.cpp  PlyFile.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  TestSurface.cpp  TestSurface.h  Torus.cpp  Torus.h  Triangle.h  Vertex.h  VertexData.h
